<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textViewListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewListTeam"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="Team"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewListName"
        app:layout_constraintLeft_toLeftOf="@+id/textViewListName"/>

    <Button
        android:id="@+id/buttonListJoin"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_join"
        android:onClick="sendEmail"
        app:layout_constraintTop_toBottomOf="@id/textViewListTeam"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewListLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSize32"
        android:text="Location"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewListTeam"/>

    <TextView
        android:id="@+id/textViewListMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_month"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textViewListLoc"
        app:layout_constraintLeft_toLeftOf="@id/textViewListLoc" />


    <TextView
        android:id="@+id/textViewListSlash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListMonth"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_day"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListSlash1"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListDay"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_year"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListSlash2"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListYear"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>

    <TextView
        android:id="@+id/textViewListHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_hour"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListSpace"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListColon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListHour"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>


    <TextView
        android:id="@+id/textViewListMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_minute"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListColon"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListMonth"/>

    <TextView
        android:id="@+id/textViewListNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_member"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textViewListMonth"
        app:layout_constraintLeft_toLeftOf="@id/textViewListLoc" />

    <TextView
        android:id="@+id/textViewListNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="int"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListNeed"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListNeed"/>

    <TextView
        android:id="@+id/textViewListPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_member"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/textViewListNum"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewListNeed"/>

</androidx.constraintlayout.widget.ConstraintLayout>